Fixed truncated spaces in tests comments

--- a/src/public/kit/styles.css
+++ b/src/public/kit/styles.css
@@ -1244,6 +1244,7 @@ div.right-flow {
 	padding: 0;
 	margin: 20px 0;
 	line-height: 20px;
+	white-space: pre;
 	text-align: left;
 }
 .tests-comments .test-id {
